--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Tadeo Grach <2124@holbertonschool.com>
+Tomas De Castro <2294@holbertonschool.com>
